@@ -10,257 +10,263 @@
     android:clipToPadding="false"
     style="@style/EditItemCardView">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:clipChildren="false"
-        android:clipToPadding="false">
+        android:layout_height="wrap_content">
 
-        <dev.olog.msc.presentation.widget.image.view.ShadowImageView
-            android:id="@+id/cover"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:adjustViewBounds="true"
-            tools:src="@tools:sample/avatars"
-            android:scaleType="centerCrop"
-            android:clickable="true"
-            android:focusable="true"
-            tools:padding="22dp"/>
-
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/chips"
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/cover"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="24dp"
-            android:layout_marginStart="8dp"
-            app:chipSpacingHorizontal="12dp"
-            >
+            android:padding="16dp"
+            android:clipChildren="false"
+            android:clipToPadding="false">
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/bitrate"
+            <dev.olog.msc.presentation.widget.image.view.ShadowImageView
+                android:id="@+id/cover"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:adjustViewBounds="true"
+                tools:src="@tools:sample/avatars"
+                android:scaleType="centerCrop"
+                android:clickable="true"
+                android:focusable="true"
+                tools:padding="22dp"/>
+
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/chips"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="128 kB/s" />
+                app:layout_constraintTop_toBottomOf="@+id/cover"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="24dp"
+                android:layout_marginStart="8dp"
+                app:chipSpacingHorizontal="12dp"
+                >
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/format"
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/bitrate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="128 kB/s" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/format"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="MPEG-1 Layer 3" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/sampling"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="44100 Hz" />
+
+            </com.google.android.material.chip.ChipGroup>
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/picker"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="MPEG-1 Layer 3" />
+                app:layout_constraintEnd_toEndOf="@+id/autoTag"
+                app:layout_constraintBottom_toTopOf="@+id/autoTag"
+                app:fabSize="mini"
+                android:src="@drawable/vd_image_search"
+                android:layout_marginBottom="8dp" />
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/sampling"
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/autoTag"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="44100 Hz" />
-
-        </com.google.android.material.chip.ChipGroup>
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/picker"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="@+id/autoTag"
-            app:layout_constraintBottom_toTopOf="@+id/autoTag"
-            app:fabSize="mini"
-            android:src="@drawable/vd_image_search"
-            android:layout_marginBottom="8dp" />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/autoTag"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/cover"
-            android:layout_marginEnd="16dp"
-            app:fabSize="mini"
-            android:src="@drawable/vd_search"
-            android:layout_marginBottom="22dp"/>
-
-        <LinearLayout
-            android:id="@+id/info"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/chips"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/titleLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/edit_info_title">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="@style/EditItemEditText"
-                    tools:text="@string/edit_info_title"/>
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/artistLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/edit_info_artist">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/artist"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="@style/EditItemEditText"
-                    tools:text="@string/edit_info_artist"/>
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/albumArtistLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/edit_info_album_artist">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/albumArtist"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="@style/EditItemEditText"
-                    tools:text="@string/edit_info_album_artist"/>
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/albumLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/edit_info_album">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/album"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="@style/EditItemEditText"
-                    tools:text="@string/edit_info_album"/>
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/genreLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/edit_info_genre">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/genre"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="@style/EditItemEditText"
-                    tools:text="@string/edit_info_genre"
-                    android:nextFocusDown="@+id/year"/>
-
-            </com.google.android.material.textfield.TextInputLayout>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="@+id/cover"
+                android:layout_marginEnd="16dp"
+                app:fabSize="mini"
+                android:src="@drawable/vd_search"
+                android:layout_marginBottom="22dp"/>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:id="@+id/info"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:weightSum="3"
-                android:orientation="horizontal"
-                android:baselineAligned="false">
+                android:orientation="vertical"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/chips"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/yearLayout"
-                    android:layout_width="0dp"
+                    android:id="@+id/titleLayout"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:hint="@string/edit_info_year"
-                    android:layout_marginEnd="8dp">
+                    android:hint="@string/edit_info_title">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/year"
+                        android:id="@+id/title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         style="@style/EditItemEditText"
-                        tools:text="@tools:sample/date/ddmmyy"
-                        android:nextFocusDown="@+id/disc"/>
+                        tools:text="@string/edit_info_title"/>
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/artistLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/edit_info_artist">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/artist"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        style="@style/EditItemEditText"
+                        tools:text="@string/edit_info_artist"/>
 
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/discLayout"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
+                    android:id="@+id/albumArtistLayout"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/edit_info_disc"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp">
+                    android:hint="@string/edit_info_album_artist">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/disc"
+                        android:id="@+id/albumArtist"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         style="@style/EditItemEditText"
-                        tools:text="@tools:sample/date/ddmmyy"
-                        android:nextFocusDown="@+id/trackNumber"/>
+                        tools:text="@string/edit_info_album_artist"/>
 
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/trackNumberLayout"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
+                    android:id="@+id/albumLayout"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/edit_info_track"
-                    android:layout_marginStart="8dp">
+                    android:hint="@string/edit_info_album">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/trackNumber"
+                        android:id="@+id/album"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         style="@style/EditItemEditText"
-                        tools:text="@tools:sample/date/ddmmyy"/>
+                        tools:text="@string/edit_info_album"/>
 
                 </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/genreLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/edit_info_genre">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/genre"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        style="@style/EditItemEditText"
+                        tools:text="@string/edit_info_genre"
+                        android:nextFocusDown="@+id/year"/>
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:weightSum="3"
+                    android:orientation="horizontal"
+                    android:baselineAligned="false">
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/yearLayout"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:hint="@string/edit_info_year"
+                        android:layout_marginEnd="8dp">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/year"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            style="@style/EditItemEditText"
+                            tools:text="@tools:sample/date/ddmmyy"
+                            android:nextFocusDown="@+id/disc"/>
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/discLayout"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/edit_info_disc"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginEnd="8dp">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/disc"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            style="@style/EditItemEditText"
+                            tools:text="@tools:sample/date/ddmmyy"
+                            android:nextFocusDown="@+id/trackNumber"/>
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/trackNumberLayout"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/edit_info_track"
+                        android:layout_marginStart="8dp">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/trackNumber"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            style="@style/EditItemEditText"
+                            tools:text="@tools:sample/date/ddmmyy"/>
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                </LinearLayout>
 
             </LinearLayout>
 
-        </LinearLayout>
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/okButton"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/info"
+                android:text="@string/popup_positive_save"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/PositiveButton"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/okButton"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/info"
-            android:text="@string/popup_positive_save"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/PositiveButton"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp" />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/cancelButton"
+                android:text="@string/popup_negative_cancel"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="@+id/okButton"
+                app:layout_constraintTop_toTopOf="@+id/okButton"
+                app:layout_constraintEnd_toStartOf="@+id/okButton"
+                android:layout_marginEnd="16dp" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/cancelButton"
-            android:text="@string/popup_negative_cancel"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="@+id/okButton"
-            app:layout_constraintTop_toTopOf="@+id/okButton"
-            app:layout_constraintEnd_toStartOf="@+id/okButton"
-            android:layout_marginEnd="16dp" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
 
 </com.google.android.material.card.MaterialCardView>
