@@ -9,6 +9,7 @@
 - removed edit item ripple on click
 - fixed low quality images
 - fixed download track image automatically
+- fixed edit track not showing properly
 
 2.0.3
 
